Desktop Page Info/MacViews: HoverButtons override full keyboard access setting.

HoverButtons should show a background highlight when focused or when the mouse
is hovering over it. On Mac, the mouse hover is broken because the HoverButton
isn't focusable when the Full Keyboard Access setting is turned off (to
textboxes and lists only). Since HoverButtons are designed for use in a stack
(like a list / menu), ignore this setting and always allow HoverButtons to be
focusable on Mac.

Bug: 786715
Change-Id: I7692b052886974389d45bb176c71f34d94eb269c
Reviewed-on: https://chromium-review.googlesource.com/781301
Commit-Queue: Trent Apted <tapted@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#518213}
Former-commit-id: f168a3d0f47f69345d88b462b1b73e429ee7dd6e